# road-to-3d-graphics

./: CMakeLists.txt  main.c  main.h  readme.md
notes/: 1- intro.md  2-extensions.md
resources/shaders/: fragment.shader
